What's New in IDLE 1.2.2c1?
=========================

*Release date: XX-FEB-2008*

- Avoid hang when encountering a duplicate in a completion list. Bug 1571112.
  (backport r53042)

- Some syntax errors were being caught by tokenize during the tabnanny        
  check, resulting in obscure error messages.  Do the syntax check            
  first.  Bug 1562716, 1562719  (backport r52083)

- Patch 1693258: Fix for duplicate "preferences" menu-OS X. (backport r56204)

- OSX: Avoid crash for those versions of Tcl/Tk which don't have a console

What's New in IDLE 1.2.1?
=========================

*Release date: 18-APR-2007*

What's New in IDLE 1.2.1c1?
===========================

*Release date: 05-APR-2007*

- Bug in idlelib.MultiCall: Options dialog was crashing IDLE if there was an
  option in config-extensions w/o a value. Patch #1672481, Tal Einat
  (backport from rev. 54156)

- Honor the "Cancel" action in the save dialog (Debian bug #299092).

- Bug #813342: Start the IDLE subprocess with -Qnew if the parent
  is started with that option. (backport from rev. 52295)

What's New in IDLE 1.2?
=======================

*Release date: 19-SEP-2006*

What's New in IDLE 1.2c2?
=========================

*Release date: 12-SEP-2006*

What's New in IDLE 1.2c1?
=========================

*Release date: 17-AUG-2006*

- File menu hotkeys: there were three 'p' assignments.  Reassign the
  'Save Copy As' and 'Print' hotkeys to 'y' and 't'.  Change the
  Shell hotkey from 's' to 'l'.

- IDLE honors new quit() and exit() commands from site.py Quitter() object.
  Patch 1540892, Jim Jewett

- The 'with' statement is now a Code Context block opener.
  Patch 1540851, Jim Jewett

- Retrieval of previous shell command was not always preserving indentation
  (since 1.2a1) Patch 1528468 Tal Einat.

- Changing tokenize (39046) to detect dedent broke tabnanny check (since 1.2a1)

- ToggleTab dialog was setting indent to 8 even if cancelled (since 1.2a1).
